Fixed add_favorites and favorites.css
Basic outline for adding favorites, still needs some styling.

--- a/add_favorites.html
+++ b/add_favorites.html
@@ -2,46 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="favorites.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Add Favorites</title>
 </head>
 <body>
-    <div class="EZPark-Container">
-        <header class="header">
-            <h1 class="EZPark">EZPark</h1>
-            <div class="buttons-container-header">
-                <button class="settings"><i class="fa fa-gear"></i></button>
-                <button class="profile"><i class="fa fa-user-circle"></i></button>
-            </div>
-        </header>
+    <div class="ezpark-container">
+        <h1 class="ezpark-container-header">EZPark</h1>
+        <div class="ezpark-container-header-buttons">
+            <button class="settings"><i class="fa fa-gear"></i></button>
+            <button class="profile"><i class="fa fa-user-circle"></i></button>
+        </div>
     </div>
-    <div class="content-body">
-        <nav class="decks-container">
-            <ul class="decks-list">
-                <li><button>West Deck</button></li>
-                <li><button>Cone Deck</button></li>
-                <li><button>Cone Deck Faculty</button></li>
-                <li><button>East Deck 1</button></li>
-                <li><button>East Deck 2/3</button></li>
-                <li><button>North Deck</button></li>
-                <li><button>South Village Deck</button></li>
-                <li><button>Union Deck Lower</button></li>
-                <li><button>Union Deck Upper</button></li>
-                <li><button>CRI Deck</button></li>
-                <li><button>Lot 28</button></li>
-                <li><button>Lot 7</button></li>
-                <li><button>Lot 7A</button></li>
-                <li><button>Lot 25</button></li>
-                <li><button>Lot 4A</button></li>
-                <li><button>Lot 14</button></li>
-            </ul>
-        </nav>
+    <div class="deck-container">
+        <div class="deck-list">
+            <button class="deck-item">West Deck</button>
+            <button class="deck-item">Cone Deck</button>
+            <button class="deck-item">Cone Deck Faculty</button>
+            <button class="deck-item">East Deck 1</button>
+            <button class="deck-item">East Deck 2/3</button>
+            <button class="deck-item">North Deck</button>
+            <button class="deck-item">South Village Deck</button>
+            <button class="deck-item">Union Deck Lower</button>
+            <button class="deck-item">Union Deck Upper</button>
+            <button class="deck-item">CRI Deck</button>
+            <button class="deck-item">Lot 28</button>
+            <button class="deck-item">Lot 7</button>
+            <button class="deck-item">Lot 7A</button>
+            <button class="deck-item">Lot 25</button>
+            <button class="deck-item">Lot 4A</button>
+            <button class="deck-item">Lot 14</button>
+        </div>
     </div>
-    <h1 class="favorite-parking">Favorite<br>Parking</h1>
-    <footer class="EZPark-Footer">
-        <div class="buttons-container-footer">
+    <footer class="ezpark-footer">
+        <div class="ezpark-footer-buttons">
             <button class="back">Back</button>
             <button class="logout">Logout</button>
         </div>
